# agentv2

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NATIVE_NODE_KINDS.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
k8s/: README.md
k8s/argocd/: agentv2-application.yaml
k8s/base/: configmap.yaml  deployment.yaml  flow-configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  redis.yaml  secret.example.yaml  service.yaml
k8s/chart/agentv2/: Chart.yaml  values-prod.yaml  (+1 more)
src/bm_flow_agent/: __init__.py  __main__.py  api.py  auth.py  cli.py  events.py  graph.py  prompts.py  storage.py  ui.py
src/bot_agent/: __init__.py  __main__.py  api.py  cli.py  events.py  graph.py  prompts.py  storage.py  ui.py
subflows/: appointment_booking_form.json  bug_report_form.json  callback_request_form.json  complaint_form.json  confirm_yes_no.json  consultation_request_form.json  contact_request.json  delivery_request_form.json  demo_request_form.json  event_registration_form.json  feedback_form.json  index.json  job_application_form.json  lead_capture_basic.json  maintenance_request_form.json  multi_step_register_form.json  newsletter_signup_form.json  order_request_form.json  partner_application_form.json  phone_capture.json  promo_claim_form.json  quote_request_form.json  reservation_request_form.json  supplier_request_form.json  support_ticket_form.json  survey_quick_form.json  text_input_capture.json  warranty_claim_form.json
tests/: test_agent.py  test_api.py  test_cli.py  test_dsl.py  test_graph.py  test_native_nodes.py
workflows/: main.flow.yaml
(+41 files in other folders)
