[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bm-flow-agent"
version = "0.1.0"
description = "CLI flow authoring agent for Botmother Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.60",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langchain>=0.3.7",
  "langchain-aws[anthropic]>=0.2.0",
  "langchain-ollama>=0.2.0",
  "pydantic>=2.9.2",
  "PyYAML>=6.0.2",
  "typer>=0.12.5",
  "termcolor>=2.5.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "redis>=5.2.0",
  "PyJWT[crypto]>=2.10.0",
  "cryptography>=44.0.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "httpx>=0.27.0",
]

[project.scripts]
bm-agent = "bm_flow_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bm_flow_agent"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
